unpackaged/main/default/objects/ETI_Aman_Lookup__c/ETI_Aman_Lookup__c.object-meta.xml
<CustomObject>
    <description>Lookup Object to retrieve all aman information related to PLATE_COLOR, PLATE_SOURCE, PLATE_TYPE, AMAN_LOCATION</description>
    <label>Aman Lookup</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aman Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>