unpackaged/main/default/objects/ETI_Aman_Lookup__c/fields/ETI_ArabicName__c.field-meta.xml
<CustomField>
    <fullName>ETI_ArabicName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arabic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>