unpackaged/main/default/objects/ETI_Aman_Lookup__c/fields/ETI_External_ID__c.field-meta.xml
<CustomField>
    <fullName>ETI_External_ID__c</fullName>
    <description>Combination of LookupType + LookupCode</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>