unpackaged/main/default/objects/ETI_Aman_Lookup__c/fields/ETI_LookupCode__c.field-meta.xml
<CustomField>
    <fullName>ETI_LookupCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lookup Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>