unpackaged/main/default/objects/ETI_Aman_Lookup__c/fields/ETI_LookupType__c.field-meta.xml
<CustomField>
    <fullName>ETI_LookupType__c</fullName>
    <label>Lookup Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMAN_LOCATION</fullName>
            </value>
            <value>
                <fullName>PLATE_COLOR</fullName>
            </value>
            <value>
                <fullName>PLATE_SOURCE</fullName>
            </value>
            <value>
                <fullName>PLATE_TYPE</fullName>
            </value>
            <value>
                <fullName>AMAN_SERVICES</fullName>
            </value>
            <value>
                <fullName>FUEL_TYPE</fullName>
            </value>
            <value>
                <fullName>VEHICLE_TYPE</fullName>
            </value>
            <value>
                <fullName>TEST_PURPOSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>