unpackaged/main/default/objects/ETI_Aman_Lookup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETI_LookupType__c</columns>
    <columns>ETI_LookupCode__c</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>